--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">QueComoHoy</string>
     <string name="newDishAdded">Plato añadido</string>
+    <string name="dishEdited">Plato actualizado</string>
+
 
 </resources>
