dish can now be edited

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">QueComoHoy</string>
     <string name="newDishAdded">Plato añadido</string>
     <string name="dishEdited">Plato actualizado</string>
+    <string name="editDishButton">Guardar</string>
+
 
 
 </resources>
