dishes menu now has long click options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="newDishAdded">Plato añadido</string>
     <string name="dishEdited">Plato actualizado</string>
     <string name="editDishButton">Guardar</string>
-
+    <string-array name="dishMenuOptions">
+        <item>Eliminar</item>
+    </string-array>
 
 
 </resources>
